--- a/src/app/tabs-manager/tabs-manager.component.scss
+++ b/src/app/tabs-manager/tabs-manager.component.scss
@@ -8,11 +8,19 @@
     .template-container-parent{
         display: flex;
         flex: 1;
-        width: 90%;
+        overflow: hidden;
+        // margin-left: 10px;
+        margin-right: 10px;
         .template-container{
             display: flex;
             max-width: 100%;
             overflow: hidden;
         }
     }
+}
+
+button{
+    background: transparent;
+    border: none;
+    margin-right: 10px;
 }
