--- a/src/app/tabs/tabs.component.scss
+++ b/src/app/tabs/tabs.component.scss
@@ -2,20 +2,24 @@
     min-width: 100px;
     display: flex;
     justify-content: center;
-
+    height: 30px;
+    align-items: center;
+    position: relative;
     p{
         width: 100%;
         text-align: center;
+        margin-bottom: 0;
     }
 
     .delete-btn{
-        position: relative;
         height: fit-content;
         margin-left: auto;
         background: transparent;
         border: none;
         color: gray;
-        top: 5px;
+        position: absolute;
+        right: 2px;
+        top: 0;
     }
 }
 
