--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 
-$tabs-manager-background:#f9f9f9
+$tabs-manager-background:#f9f9f9;
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
