--- a/src/app/tabs/tabs.component.html
+++ b/src/app/tabs/tabs.component.html
@@ -1,4 +1,4 @@
-<div class="tab" (mouseenter) = "showContentOnHover()" (mouseleave) = "hideContentOnHover()" [ngClass] = "{'active-tab':isActive}" #tab (click) = "activateTab()">
+<div class="tab" (mouseenter) = "showContentOnHover()" (mouseleave) = "hideContentOnHover()" [ngClass] = "{'active-tab':isActive}" #tab (click) = "activateTab()" cdkDrag>
     <p *ngIf = "tabData?.tabName"> {{tabData?.tabName}} </p>
     <button class="delete-btn" (click) = "deleteTab()" *ngIf = "showRemoveBtn"> <i class="fas fa-times"></i> </button>
 </div>
