fixed chevron appearance on drag and drop

--- a/src/app/tabs/tabs.component.scss
+++ b/src/app/tabs/tabs.component.scss
@@ -5,6 +5,7 @@
     height: 30px;
     align-items: center;
     position: relative;
+    cursor: pointer;
     p{
         width: 100%;
         text-align: center;
